syntax = "proto3";
package pb;

message Cell {
	int64 x = 1;
	int64 y = 2;
	oneof CellType {
		int32 bombs = 3;
		string flagURL = 4;
		bool unTouched = 5;
	}
}

message Area {
	// 10 * 10 cells
	int64 x = 1;
	int64 y = 2;
	repeated Cell cells = 3;
}

enum TouchType {
	FLIP = 0;
	FLAG = 1;
}

message TouchRequest {
	int64 x = 1;
	int64 y = 2;
	TouchType touchType = 3;
}

enum TouchResultType {
	CORRECT = 0;
	WRONG = 1;
	ABORT = 2;
}

message TouchResponse {
	int32 score = 1;
	Cell cell = 2;
	TouchResultType touchResult = 3;
}

message XY {
	int64 x = 1;
	int64 y = 2;
}

message ClientToServer {
	oneof request {
		TouchRequest touch = 1;
		XY getArea = 2;
	}
}

message ServerToClient {
	string Msg = 1;
}